jp-website-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jp-website-frontend
  labels:
    app: jp-website-frontend
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: jp-website-frontend
